Made tokens same size as the grid cell to stop janky alignment of images

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,6 +39,10 @@ a.local-game {
     border-width: 2px 0;
 }
 
+.small-board .board .column:hover {
+    background-color: inherit;
+}
+
 .small-board .token {
     background-size: 105%;
 }
@@ -101,7 +105,8 @@ a.local-game {
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-size: 102%;
+    z-index: 1;
+    background-size: 100% 100%;
     background-position: center center;
     text-align: center;
 }
@@ -202,7 +207,7 @@ a.local-game {
 }
 
 @keyframes example {
-    from { bottom: 300px; }
+    from { top: 500px; }
 }
 
 .new.token {
